<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NoScroll</string>
    <string name="setup_title">Setup NoScroll</string>
    <string name="accessibility_description">NoScroll watches for Instagram to show the blocker or reader entry point on distracting scroll surfaces.</string>
    <string name="overlay_step_title">Step 1: Display Over Other Apps</string>
    <string name="overlay_step_desc">Lets NoScroll draw the blocker and reader entry point on top of Instagram.</string>
    <string name="overlay_btn">Grant Permission</string>
    <string name="accessibility_step_title">Step 2: Accessibility Service</string>
    <string name="accessibility_step_desc">Lets NoScroll detect when Instagram is open and identify distracting scroll surfaces.</string>
    <string name="accessibility_btn">Enable Service</string>
    <string name="done_btn">Done</string>
    <string name="change_pdf">Change PDF</string>
    <string name="goto_page">Go to page</string>
    <string name="add_pdf">Add PDF</string>
    <string name="delete_pdf">Delete PDF</string>
    <string name="pdf_library">PDF Library</string>
    <string name="quote_preview">Quote card preview</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="instagram_stories">Instagram Stories</string>
    <string name="instagram_feed">Instagram Feed</string>
    <string name="instagram_direct">Instagram Direct</string>
    <string name="messages">Messages</string>
    <string name="share_via">Share via...</string>
    <string name="metadata_lookup">Look up book info online</string>
    <string name="make_quote">Make quote card</string>
    <string name="highlight">Highlight</string>
    <string name="annotate">Annotate</string>
    <string name="quote">Quote</string>
    <string name="highlights">Highlights</string>
    <string name="zen_mode">Zen mode</string>
    <string name="exit_zen_mode">Exit zen mode</string>
    <string name="no_selectable_text">No selectable text in this PDF</string>
    <string name="ocr_page">OCR page</string>
    <string name="export_highlights">Export</string>
    <string name="search_online">Search online</string>
</resources>
